--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
-smartfile-chat-app:
-image: smartfile-chat-app:latest
-build: ./app
-command: streamlit run demo_app/main.py --server.port 8080
-volumes:
-- ./demo_app/:/app/demo_app
-ports:
-- 8080:8080
+  smartfile-chat-app:
+    image: smartfile-chat-app:latest
+    build: ./app
+    command:  uvicorn main:app --host 0.0.0.0 --port 8080
+    volumes:
+    - ./:/app
+    ports:
+    - 8080:8080
