--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-Flask==3.0.3
-gunicorn==22.0.0
-poetry==1.4.2
-Werkzeug==3.0.3
-streamlit
+langchain >= 0.0.184
+openai >= 0.27.7
+fastapi>=0.95.2
+langchain-openai
+python-dotenv
+langchain_chroma
+uvicorn
+langchainhub
